# MRI-FCD-detection

./: README.md
S1-5_Preprocessing/: Preprocessing_steps.txt  TissueSeg.sh  brain.sh  registration.sh
S10_ClusterBasedFeatures/: ClusterFeatures.m
S11_ClusterClassify/: S2_ClusterClassify.m  S3_Label_3D_data.m
S6_Featues_F1_CorticalThickness/GM_thickness/GM_Potential/source/: CMakeLists.txt  GM_Potential.cxx
S6_Featues_F1_CorticalThickness/GM_thickness/GM_Thick_v1/source/: CMakeLists.txt  GM_Thick.cxx
S6_Featues_F1_CorticalThickness/GM_thickness/GM_Thick_v2/source/: CMakeLists.txt  GM_Thick.cxx
S6_Featues_F1_CorticalThickness/GM_thickness/GM_extract/source/: CMakeLists.txt  GM_extract.cxx
S6_Featues_F1_CorticalThickness/GM_thickness70/GM_extract/source/: GM_extract.cxx
S6_Featues_F2_GradientMap/Gradient_Map/source/: CMakeLists.txt  Gradient_Map.cxx
S6_Featues_F2_GradientMap/Gradient_Map_matlab/: gradient_Gaussian_kernal.m  step6_blur_gradient_v2.m
S6_Featues_F2_GradientMap/Gradient_Map_v2/source/: Gradient_Map.cxx
S6_Featues_F3_RIM/Relative_intensity_map/source/: CMakeLists.txt  Relative_intensity_map.cxx
S6_Featues_F4_GWB_width/GWB_width/GWB_Potential_Map/source/: CMakeLists.txt  GWB_Potential_Map.cxx
S6_Featues_F4_GWB_width/GWB_width/GWB_extract/source/: CMakeLists.txt  GWB_extract.cxx
S6_Featues_F4_GWB_width/GWB_width/GWB_thickness_v1/source/: CMakeLists.txt  thickness_calculation.cxx
S6_Featues_F4_GWB_width/GWB_width/GWB_thickness_v2/source/: CMakeLists.txt  thickness_calculation.cxx
S6_Featues_F4_GWB_width/GWB_width_matlab/: GWBwidth_1_Seg.m  GWBwidth_2_Potential.m  GWBwidth_3_Width.m  main.m
S6_Featues_F5_curvature/: Step1_1_Data_Prepare.m  Step1_2_niiTOvtk.txt  Step2_Extract_and_smooth_surface.sh  Step3_1_MITK_work_bench.txt  Step3_2_Compute_Curvature_matlab.m  curvatures_TO_volume.m  extend_to_volumes.m
S6_Featues_F6_sulcal_depth/: sulcal_depth_run.sh  sulcal_depth_run_healthy.sh
S6_Featues_F6_sulcal_depth/Step1_sulcal_extraction/source/: CMakeLists.txt  CMakeLists.txt~  sulcal_extraction.cxx
S6_Featues_F6_sulcal_depth/Step2_Potential/source/: CMakeLists.txt  CMakeLists.txt~  Potential.cxx
S6_Featues_F6_sulcal_depth/Step3_depth/source/: CMakeLists.txt  CMakeLists.txt~  depth.cxx
S7_z_score/: GMthick_z_score.m  Gradient_z_score.m  RIM_z_score.m  curvature_z_score.m  sulcal_depth_z_score.m
S7_z_score/Mean_SD_Healthy/: Health_GMthick_Mean_v2.m  Health_GWBthick_Mean_v4.m  Health_Gradient_Mean_v2.m  Health_RIM_Mean_v2.m  curvatures_Mean.m  curvatures_SD.m  sulcal_depth_Mean.m  sulcal_depth_SD.m
S7_z_score/z_score/source/: CMakeLists.txt  z_score.cxx
S7_z_score/z_score_Relative/source/: CMakeLists.txt  FCD_relative_z_score.cxx
S8_Classification1/S1_GenerateSamples/: Generate_Samples.sh
S8_Classification1/S1_GenerateSamples/Generate_Samples/source/: CMakeLists.txt  Generate_Samples.cxx
S8_Classification1/S2_FeatureSlections/: FeatureSlections.m
S8_Classification1/S3_Classification/: Classification1.m  Classification2.m  Classification3.m
S9_Generate_Clusters/: Generate_Clusters.m
